--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,2 @@
-<h1>We all love kittens</h1>
+<h1>Hello World</h1>
 <p>But I just don't know where to find them on the internet. This is our place.</p>
