Added Bootstrap and styling

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the index controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$navbar-inverse-bg: rgb(133, 18, 38);
+
+$navbar-inverse-color: white;
+$navbar-inverse-link-color: white;
+$navbar-border-radius: 0;
+
+@import 'bootstrap';
