--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,2 +1,6 @@
-<h1>We love kittens</h1>
-<p>But I just don't know where to find them on the internet. This is our place.</p>
+
+<div class="jumbotron">
+  <h1>We all love kittens</h1>
+  <p>But I <i>just don't know</i> where to find them on the <b>internet</b>.</p>
+  <p><a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a></p>
+</div>
