--- a/app/views/page/images.html.erb
+++ b/app/views/page/images.html.erb
@@ -1,2 +1,12 @@
 <H1>This is my images page.</H1>
 <p>Pinterest for kittens images.</p>
+   
+
+<div class="row">
+  <div class="col-md-4"><img src="http://www.sccl.org/sites/default/files/uploads/locations/cupertino/garfield.jpg"/></div>
+  
+
+<div class="row">
+  <div class="col-md-4"><img src="http://i.telegraph.co.uk/multimedia/archive/01362/bengal-tiger-460_1362404c.jpg"/></div>
+  <div class="col-md-4"><img class="img-responsive" src="http://www.us.onsior.com/images/3_1/cat-3_1-01.png"/></div>
+</div>
