--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -6,3 +6,14 @@
 
   <span class="glyphicon glyphicon-star"></span>
 </div>
+
+<div><table class="table">
+  <tr>
+    <th>Pinterest for Kittens</th>
+    <th>Table</th>
+  </tr>
+  <tr>
+    <td>Kittens</td>
+    <td>Images</td>
+  </tr>
+</table></div>
