--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li> 
+       <li><a href="/images">Images</a></li> 
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
