Added a star in the button

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -2,9 +2,9 @@
 <div class="jumbotron">
   <h1>We all love kittens</h1>
   <p>But I <i>just don't know</i> where to find them on the <b>internet</b>.</p>
-  <p><a class="btn btn-primary btn-lg" role="button" href="/about">Learn more</a></p>
+  <p><a class="btn btn-primary btn-lg" role="button" href="/about"><span class="glyphicon glyphicon-star"></span>Learn more</a></p>
 
-  <span class="glyphicon glyphicon-star"></span>
+  
 </div>
 
 <div><table class="table">
