--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/">Home</a></li>
       <li><a href="/about">About</a></li> 
-       <li><a href="/images">Images</a></li> 
+       <li><a href="/images">Images</a></li>
+       <li><a href="/pins">Pins</a></li> 
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
