--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
        <li><a href="/images">Images</a></li>
        <li><a href="/pins">Pins</a></li> 
        <% if user_signed_in? %>
-        <li><%= link_to "Sign out", destroy_user_session_path %></li>
+        <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
       <% else %>
         <li><%= link_to "Sign Up", new_user_registration_path %></li>
         <li><%= link_to "Sign In", new_user_session_path %></li>
