Added Jumbotron and Welcome Back

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,5 +1,11 @@
 <h1>Listing pins</h1>
 
+<div class="jumbotron">
+  <h1>Welcome to Pinterest for Kittens!</h1>
+  <p>Already Have an Account? Sign In or Sign Up for Pinterest for Kittens</p>
+  <p><a class="btn btn-primary btn-lg" role="button" href="/users/sign_in">Sign In</a> <a class="btn btn-primary btn-lg" role="button" href="/users/sign_up">Sign Up</a></p>
+</div>
+
 <table class="table table-striped">
   <thead>
     <tr>
