--- a/app/views/page/images.html.erb
+++ b/app/views/page/images.html.erb
@@ -2,11 +2,18 @@
 <p>Pinterest for kittens images.</p>
    
 
-<div class="row">
-  <div class="col-md-4"><img src="http://www.sccl.org/sites/default/files/uploads/locations/cupertino/garfield.jpg"/></div>
+<p>
+	<img src="http://www.sccl.org/sites/default/files/uploads/locations/cupertino/garfield.jpg"/>
+</p>
   
 
-<div class="row">
-  <div class="col-md-4"><img src="http://i.telegraph.co.uk/multimedia/archive/01362/bengal-tiger-460_1362404c.jpg"/></div>
-  <div class="col-md-4"><img class="img-responsive" src="http://www.us.onsior.com/images/3_1/cat-3_1-01.png"/></div>
-</div>
+<p>
+	
+  <div class="col-md-4"><img src="http://i.telegraph.co.uk/multimedia/archive/01362/bengal-tiger-460_1362404c.jpg"/>
+  </p>
+
+
+  <p>
+  	<img class="img-responsive" src="http://www.us.onsior.com/images/3_1/cat-3_1-01.png"/>
+
+</p>
